아이디,비번 찾기

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency> 
+		
+		<!-- 메일 api -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-email</artifactId>
+		    <version>1.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
